[tool.poetry]
name = "sysintwebhooks"
version = "0.1.0"
description = ""
authors = ["AugustHD <augu0577@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
